####################################################################################################

filegroup(
    name = "xodr_files",
    srcs = glob(["xodr/*.xodr"]),
    visibility = ["//visibility:public"],
)

####################################################################################################

filegroup(
    name = "xosc_files",
    srcs = glob(["xosc/*.xosc"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "catalogs",
    srcs = glob(["xosc/Catalogs/**/*"]),
    visibility = ["//visibility:public"],
)