load("@rules_cc//cc:defs.bzl", "cc_test")

####################################################################################################

filegroup(
    name = "xodr_files",
    srcs = glob(["xodr/*.xodr"]),
    visibility = ["//visibility:public"],
)

####################################################################################################

filegroup(
    name = "xosc_files",
    srcs = glob(["xosc/*.xosc"]),
    visibility = ["//visibility:public"],
)

####################################################################################################

cc_test(
    name = "operating_system_test",
    srcs = [
        "OperatingSystem_test.cpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

####################################################################################################

cc_test(
    name = "road_manager_test",
    srcs = [
        "RoadManager_test.cpp",
    ],
    data = [
        "//resources:all_files",
        ":xodr_files",
    ],
    defines = ["_USE_BAZEL"],
    visibility = ["//visibility:public"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//EnvironmentSimulator/Modules/RoadManager:road_manager",
    ],
)

####################################################################################################

cc_test(
    name = "scenario_engine_test",
    srcs = [
        "ScenarioEngine_test.cpp",
    ],
    data = [
        "//resources:all_files",
        ":xosc_files",
        ":xodr_files",
        "//scripts/udp_driver:xosc_files",
    ],
    defines = ["_USE_BAZEL"],
    visibility = ["//visibility:public"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//EnvironmentSimulator/Modules:scenarioengine_controllers_playerbase_viewer",
    ],
)

####################################################################################################

cc_test(
    name = "scenario_player_test",
    srcs = [
        "ScenarioPlayer_test.cpp",
    ],
    data = [
        "//resources:all_files",
        ":xosc_files",
        ":xodr_files",
    ],
    defines = ["_USE_BAZEL"],
    visibility = ["//visibility:public"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//EnvironmentSimulator/Modules:scenarioengine_controllers_playerbase_viewer",
    ],
)

####################################################################################################

cc_test(
    name = "scenario_engine_dll_test",
    srcs = [
        "ScenarioEngineDll_test.cpp",
    ],
    data = [
        "//resources:all_files",
        ":xosc_files",
        ":xodr_files",
        "//EnvironmentSimulator/code-examples/test-driver:test_driver_xosc",
        "//EnvironmentSimulator/code-examples/position-mode:skater_xosc",
    ],
    defines = ["_USE_BAZEL"],
    visibility = ["//visibility:public"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//EnvironmentSimulator/Libraries/esminiLib:esmini_lib",
        "//EnvironmentSimulator/Applications/replayer:replayer_lib",
    ],
)

####################################################################################################

cc_test(
    name = "road_manager_dll_test",
    srcs = [
        "RoadManagerDll_test.cpp",
    ],
    data = [
        "//resources:all_files",
        ":xodr_files",
    ],
    defines = ["_USE_BAZEL"],
    visibility = ["//visibility:public"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//EnvironmentSimulator/Libraries/esminiRMLib:esmini_rm_lib",
    ],
)

####################################################################################################

cc_test(
    name = "common_mini_test",
    srcs = [
        "CommonMini_test.cpp",
    ],
    defines = ["_USE_BAZEL"],
    visibility = ["//visibility:public"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//EnvironmentSimulator/Modules/CommonMini:common_mini",
    ],
)

####################################################################################################

cc_test(
    name = "follow_route_test",
    srcs = [
        "FollowRoute_test.cpp",
    ],
    data = [
        "//resources:all_files",
        ":xodr_files",
    ],
    defines = ["_USE_BAZEL"],
    visibility = ["//visibility:public"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//EnvironmentSimulator/Modules/RoadManager:road_manager",
        "//EnvironmentSimulator/Modules:scenarioengine_controllers_playerbase_viewer",
    ],
)